--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> XXXXX </title>
+    <title> “Claps here, taps there… all love 😘🥰 </title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <style>
         body {
@@ -58,11 +58,11 @@
     </style>
 </head>
 <body>
-    <div class="video-title"> XXXXX <span aria-label="smile" role="img"></span></div>
+    <div class="video-title"> “Claps here, taps there… all love 😘🥰 <span aria-label="smile" role="img"></span></div>
     <div class="video-wrapper">
         <div class="ad-banner-inside" id="ad-inside-video"></div>
-        <video controls poster="https://cdn.aceimg.com/8353560b1.jpg">
-            <source src="https://cdn.videy.co/SQhNZzq71.mp4" type="video/mp4">
+        <video controls poster="https://cdn.aceimg.com/00a247ee8.jpg">
+            <source src="https://cdn.videy.co/yhRbj4od1.mp4" type="video/mp4">
         </video>
         </div>
     <script type="text/javascript">
